--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title></title>
+    <title>Stanley Cheung</title>
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="SC">
     
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
