161230 20:49 - Switched to Open Sans font (should work on all browsers/devices now) - Hid "site in work" message (because it's always going to be in work) - Added placeholder button to download resume_cv

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <!-- FONT
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+<!--    <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <!-- CSS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -67,10 +68,14 @@
         </div>
     </div>
     
-    <div class="section email">
+    <div class="section action">
         <div class="container">
-            <a href="mailto:inquiry@stanleychg.com" target="_blank" class="hero-email">
-                <i class="fa fa-envelope-o hero-email-icon" aria-hidden="true"></i>
+            <a href="" target="_blank" class="action-doc">
+                <i class="fa fa-file-text-o   action-doc-icon" aria-hidden="true"></i>
+            </a>
+            
+            <a href="mailto:inquiry@stanleychg.com" target="_blank" class="action-email">
+                <i class="fa fa-envelope-o action-email-icon" aria-hidden="true"></i>
             </a>
         </div>
     </div>
