170828 05:04 attempt fix file system

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
     <!--    161228 Very Important! Responsible for providing consistent look between live preview and actual!-->
-    <link type="text/css" rel="stylesheet" href="./css/normalize.css">
-    <link type="text/css" rel="stylesheet" href="./css/skeleton.css">
-    <link type="text/css" rel="stylesheet" href="./css/custom.css">
+    <link type="text/css" rel="stylesheet" href="/css/normalize.css">
+    <link type="text/css" rel="stylesheet" href="/css/skeleton.css">
+    <link type="text/css" rel="stylesheet" href="/css/custom.css">
 
     <!-- Scripts
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -58,7 +58,7 @@
     </div>
     <div class="row" id="header">
         <div class="two columns" id="menu">
-            <img src="./img/ic_menu_white_24dp_1x.png"/>
+            <img src="/img/ic_menu_white_24dp_1x.png"/>
         </div>
         <div class="ten columns" id="app-title">
             Stanley Cheung
